@@ -141,6 +141,7 @@ event_attr_changed (SPRepr * repr, const guchar * name, const guchar * old_value
 {
 	gint row;
 	SPXMLViewAttrList * list;
+	guchar new_text[64 + 4];
 	gchar *gtktext;
 
 	list = SP_XMLVIEW_ATTR_LIST (data);
@@ -148,6 +149,17 @@ event_attr_changed (SPRepr * repr, const guchar * name, const guchar * old_value
 	gtk_clist_freeze (GTK_CLIST (list));
 
 	gtktext = (new_value) ? e_utf8_from_gtk_string (GTK_WIDGET (list), new_value) : NULL;
+
+	if (gtktext) {
+		strncpy (new_text, gtktext, 64);
+		if (strlen (gtktext) >= 64) {
+			strcpy (new_text + 64, "...");
+		}
+		g_free (gtktext);
+		gtktext = new_text;
+	} else {
+		gtktext = NULL;
+	}
 
 	if (old_value) {
 		row = gtk_clist_find_row_from_data (GTK_CLIST (list), GINT_TO_POINTER (g_quark_from_string (name)));
@@ -169,8 +181,6 @@ event_attr_changed (SPRepr * repr, const guchar * name, const guchar * old_value
 		row = gtk_clist_append (GTK_CLIST (list), (gchar **)text);
 		gtk_clist_set_row_data (GTK_CLIST (list), row, GINT_TO_POINTER (g_quark_from_string (name)));
 	}
-
-	if (gtktext) g_free (gtktext);
 
 	gtk_clist_thaw (GTK_CLIST (list));
 }
